@@ -3,7 +3,7 @@
 
                       (c) 2001-2014 by van Hauser / THC
                        <vh@thc.org> http://www.thc.org
-            co-maintained by David (dot) Maciejak @ gmail (dot) com
+       many modules were written by David (dot) Maciejak @ gmail (dot) com
                  BFG code by Jan Dlabal <dlabaljan@gmail.com>
 
   		    Licensed under AGPLv3 (see LICENSE file)
