@@ -113,7 +113,7 @@ Show summary of options.
 .br
 The programs are documented fully by van Hauser <vh@thc.org>
 .SH AUTHOR
-hydra was written by van Hauser / THC <vh@thc.org> and is co-maintained by David Maciejak <david.maciejak@gmail.com>.
+hydra was written by van Hauser / THC <vh@thc.org>
 
 .PP
 This manual page was written by Daniel Echeverry <epsilon77@gmail.com>,
