@@ -23,7 +23,7 @@ Currently this tool supports:
 .BR pw-inspector (1).
 .br
 .SH AUTHOR
-hydra was written by van Hauser <vh@thc.org> and co-maintained by David Maciejak <david.maciejak@gmail.com>.
+hydra was written by van Hauser <vh@thc.org>
 
 .PP
 This manual page was written by Daniel Echeverry <epsilon77@gmail.com>,
