@@ -2,6 +2,8 @@ Changelog for hydra
 -------------------
 
 Release 8.1-pre
+* David Maciejak, my co-maintainer moved to a different job and country and can not help with Hydra anymore - sadly! Wish you all the best!
+* Added patch Strunk18 which adds h/H header options for http-form-*, still buggy though
 * Fixed for cisco-enable if an intial Login/Password is used (thanks to joswr1te for reporting)
 * Added patch by tux-mind for better MySQL compilation and an Android patches and Makefile. Thanks!
 * Added xhydra gtk patch by Petar Kaleychev to support -e r reverse login attempt, thanks!
